Apply postgres optimization

--- a/Helm Charts/PostgreSQL/values.yml
+++ b/Helm Charts/PostgreSQL/values.yml
@@ -1,8 +1,3 @@
-
-## @section PostgreSQL with Repmgr parameters
-
-## PostgreSQL parameters
-##
 postgresql:
   image:
     registry: docker.io
@@ -21,13 +16,19 @@ postgresql:
   nodeSelector:
     kube-role: worker
 
-  configuration:
-
-#  configuration: |-
-#    max_connections = 200
-#    shared_buffers = 2GB #should be 12GB
-#    work_mem = 16MB
-#    maintenance_work_mem = 1GB #should be 2GB
+  # Database optimization
+  extendedConf: |-
+    max_connections = 400  # Maximum concurrent connections
+    shared_buffers = 8GB  # Memory allocated for caching data
+    work_mem = 64MB       # Memory for sorting and hashing operations
+    effective_cache_size = 12GB  # Estimated available memory for disk caching
+    wal_level = replica       # Adjust based on replication requirements
+    autovacuum = on
+    autovacuum_max_workers = 12
+    autovacuum_naptime = 10min
+    autovacuum_vacuum_scale_factor = 0.05
+    autovacuum_analyze_scale_factor = 0.02
+    random_page_cost = 1.2  # Adjust based on the storage SSD
 
   affinity:
     podAntiAffinity:
@@ -57,28 +58,17 @@ pgpool:
   nodeSelector:
     kube-role: worker
 
-
 rbac:
-
   create: true
-
 
 serviceAccount:
-
   create: true
 
-
 persistence:
-
   enabled: true
-
   storageClass: "local-storage-post"
-
   mountPath: /bitnami/postgresql
-
   accessModes:
     - ReadWriteOnce
-
   size: 8Gi
-
 
