--- a/Helm Charts/MongoDB/values.yml
+++ b/Helm Charts/MongoDB/values.yml
@@ -13,54 +13,58 @@ auth:
 
 replicaSetName: rs0
 
-## @param configuration MongoDB(&reg;) configuration file to be used for Primary and Secondary nodes
-## For documentation of all options, see: http://docs.mongodb.org/manual/reference/configuration-options/
-## Example:
-#configuration: |-
-#  # where and how to store data.
-#  storage:
-#    wiredTiger:
-#      engineConfig:
-#        cacheSizeGB: 8
-#        journalCompressor: snappy
-#    dbPath: /bitnami/mongodb/data/db
-#    prealloc: true
-#    journal:
-#      enabled: true
-#    directoryPerDB: false
-#  # where to write logging data
-#  systemLog:
-#    destination: file
-#    quiet: false
-#    logAppend: true
-#    logRotate: reopen
-#    path: /opt/bitnami/mongodb/logs/mongodb.log
-#    verbosity: 0
-#  # network interfaces
-#  net:
-#    port: 27017
-#    unixDomainSocket:
-#      enabled: true
-#      pathPrefix: /opt/bitnami/mongodb/tmp
-#    ipv6: false
-#    bindIpAll: true
-#  # replica set options
-#  replication:
-#    oplogSizeMB: 8192
-#    #replSetName: replicaset
-#    #enableMajorityReadConcern: true
-#  # process management options
-#  processManagement:
-#     fork: false
-#     pidFilePath: /opt/bitnami/mongodb/tmp/mongodb.pid
-#  # set parameter options
-#  setParameter:
-#     enableLocalhostAuthBypass: true
-#  # security options
-#  security:
-#    authorization: disabled
-#    #keyFile: /opt/bitnami/mongodb/conf/keyfile
-configuration: ""
+configuration: |-
+  # where and how to store data.
+  storage:
+    dbPath: /bitnami/mongodb/data/db
+    wiredTiger:
+      engineConfig:
+        cacheSizeGB: 8
+        journalCompressor: snappy
+    directoryPerDB: false
+
+  # where to write logging data.
+  systemLog:
+    destination: file
+    quiet: false
+    logAppend: true
+    logRotate: reopen
+    path: /opt/bitnami/mongodb/logs/mongodb.log
+    verbosity: 0
+
+  # network interfaces
+  net:
+    port: 27017
+    unixDomainSocket:
+      enabled: true
+      pathPrefix: /opt/bitnami/mongodb/tmp
+    ipv6: false
+    bindIpAll: true
+    #bindIp:
+
+  # replica set options
+  replication:
+    replSetName: rs0
+    oplogSizeMB: 8192
+    enableMajorityReadConcern: true
+
+  # sharding options
+  #sharding:
+    #clusterRole:
+
+  # process management options
+  processManagement:
+     fork: false
+     pidFilePath: /opt/bitnami/mongodb/tmp/mongodb.pid
+
+  # set parameter options
+  setParameter:
+     enableLocalhostAuthBypass: false
+
+  # security options
+  security:
+    authorization: enabled
+    keyFile: /opt/bitnami/mongodb/conf/keyfile
 
 replicaCount: 3
 
@@ -84,14 +88,3 @@ rbac:
 arbiter:
   enabled: true
   configuration: ""
-
-replication:
-  oplogSizeMB: 8192
-storage:
-  prealloc: true
-  wiredTiger:
-    engineConfig:
-      cacheSizeGB: 8
-      journalCompressor: snappy
-
-
